[tool.poetry]
name = "textbook_learning"
version = "0.1.0"
description = "Personal notes while learning from textbooks"
authors = ["Jordan Gumm"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
